# spell-cast-rs

./: .gitignore  COPILOT_REVIEW_ISSUES.md  OAUTH2_IMPLEMENTATION.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  SETUP.md  WEEK1_ROADMAP.md  rustfmt.toml
.github/: DISCORD_OAUTH_IMPLEMENTATION.md  copilot-instructions.md
backend/: .env.example  Cargo.toml
backend/migrations/: 001_initial_schema.sql  002_add_refresh_token.sql  003_add_guild_profiles.sql  004_add_turn_order.sql
backend/src/: auth.rs  config.rs  encryption.rs  main.rs
backend/src/db/: mod.rs  queries.rs
backend/src/dictionary/: mod.rs
backend/src/game/: grid.rs  mod.rs  scorer.rs  validator.rs
backend/src/models/: game.rs  guild_profile.rs  mod.rs  user.rs
backend/src/routes/: auth.rs  health.rs  mod.rs
backend/src/utils/: letters.rs  mod.rs
backend/src/websocket/: handler.rs  messages.rs  mod.rs
frontend/: .env.example  index.html  package.json  vite.config.js
frontend/js/: discord-sdk.js  game-ui.js  main.js  websocket.js
frontend/styles/: grid.css  main.css
