[package]
name = "spell-cast-backend"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"


[dependencies]
# Async runtime
tokio = { version = "1.48.0", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Environment variables
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# HTTP client (for Discord API)
reqwest = { version = "0.12", features = ["json"] }

# OAuth2
oauth2 = "5.0"

# JWT
jsonwebtoken = "9.3"

# WebSocket
tokio-tungstenite = "0.28"
futures = "0.3"

# Concurrent data structures
dashmap = "6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random number generation
rand = "0.9"

# Configuration
config = "0.15"

# Lazy static initialization
once_cell = "1.19"

# Encryption
aes-gcm = "0.10"
base64 = "0.22"

[dev-dependencies]
# Testing
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
